Updated few changes to deleting from DB
