# src/api/controllers/todoTask.controller.js
@@ -35,8 +35,24 @@ const getTodoTasks = async function (req, res) {
     });
   }
 };
+const removeTodoTask = async function (req, res){
+  try {
+    let userDetails = req.query.authData.userData;
+    const { taskId } = req.body
+    const getRemoveTodoTasks = await taskManger.removeTodoTask(userDetails, taskId);
+    return res.status(200).json({
+      getRemoveTodoTasks,
+    });
+  } catch (error) {
+    res.status(500).json({
+      success: false,
+      message: error.message,
+    });
+  }
+}
 
 module.exports = {
   addTodoTask,
   getTodoTasks,
+  removeTodoTask
 };
